# meteorological_preprocessor

./: LICENSE  README.md  met_pre_batch_to_cache.py  met_pre_cache_to_batch.py  setup.cfg
config/: batch_to_cache.csv
src/meteorological_preprocessor/: catalog.md  clone.sh  conf_alphanumeric_to_arrow.csv  conf_arrow_to_dataset.csv  conf_arrow_to_tile_arrow.csv  conf_batch_file_to_wmo_codes_cache.csv  conf_batch_to_cache.csv  conf_bufr_arrow_to_dataset.csv  conf_bufr_surface_ship_to_arrow_location_time.csv  conf_bufr_surface_ship_to_arrow_properties.csv  conf_bufr_surface_synop_to_arrow_location_time.csv  conf_bufr_to_arrow.csv  conf_bufr_to_arrow_surface_ship_location_datetime.csv  conf_bufr_to_arrow_surface_ship_location_time.csv  conf_bufr_to_arrow_surface_ship_properties.csv  conf_bufr_to_arrow_surface_ship_property.csv  conf_bufr_to_arrow_surface_synop_location_datetime.csv  conf_bufr_to_arrow_surface_synop_location_time.csv  conf_bufr_to_arrow_surface_synop_property.csv  conf_grib_arrow_to_dataset.csv  conf_grib_to_arrow.csv  conf_synop_staion.csv  conf_temp_pilot_staion.csv  del.sh  del_4Find.sh  del_4Search.sh  exclusive_pattern.txt  inclusive_pattern.txt  met_pre_alphanumeric_to_arrow.py  met_pre_arrow_to_dataset.py  met_pre_arrow_to_day_dataset.py  met_pre_arrow_to_minute_dataset.py  met_pre_arrow_to_tile_arrow.py  met_pre_batch_file_to_wmo_codes_cache.py  met_pre_batch_to_cache.py  met_pre_bufr_to_arrow.py  met_pre_bufr_to_tile_dataset.py  met_pre_cache_to_batch.py  met_pre_grib_to_arrow.py  met_pre_grib_to_tile_dataset.py  (+8 more)
src/meteorological_preprocessor/aws/: bootstrap_body.txt  clone_jma_bin_function.sh  clone_jma_bin_main_function.sh  clone_jma_bin_sub_function.sh  clone_jma_txt_function.sh  clone_jma_txt_main_function.sh  clone_jma_txt_sub_function.sh  deploy.sh  exclusive_pattern.txt  inclusive_pattern.txt  move_4PubSub_4Search.sh  move_4PubSub_4Search_function.sh  move_4PubSub_4Search_main_function.sh  move_4PubSub_4Search_sub_function.sh  pub.sh  sub.sh  tar_bin_index_function.sh  tar_bin_index_main_function.sh  tar_bin_index_sub_function.sh  tar_txt_index_function.sh  tar_txt_index_main_function.sh  tar_txt_index_sub_function.sh
src/meteorological_preprocessor/aws/notify_contents_of_file_function/: deploy_notify.sh  notify_function.py
tests/: 0_seq_num.csv  3_seq_num.csv  5_seq_num.csv  alphanumeric_to_arrow.sh  arrow_to_4all_dataset.sh  arrow_to_dataset.sh  arrow_to_day_dataset.sh  arrow_to_minute_dataset.sh  arrow_to_preprocess.sh  arrow_to_tile_arrow.sh  bufr_pattern.txt  bufr_synop_pattern.txt  bufr_to_arrow.sh  cache_list.txt  cccc_pattern.txt  check.sh  check2.sh  checksum.arrow  clone.sh  conf_alphanumeric_to_arrow.csv  conf_arrow_to_dataset.csv  conf_arrow_to_tile_arrow.csv  conf_batch_to_cache.csv  conf_bufr_arrow_to_dataset.csv  conf_bufr_to_arrow.csv  conf_bufr_to_arrow_surface_synop_location_datetime.csv  conf_bufr_to_arrow_surface_synop_location_time.csv  conf_bufr_to_arrow_surface_synop_properties.csv  conf_bufr_to_arrow_surface_synop_property.csv  conf_grib_arrow_to_dataset.csv  conf_grib_to_arrow.csv  conf_synop_staion.csv  conf_temp_pilot_staion.csv  convert_dict.sh  cp_dev_null_log.sh  crontab.txt  crontab_pub_sub_clone_del_example.txt  del.sh  del_4Find.sh  del_4Search.sh  (+64 more)
tests/aws/: configure.txt  configure_0.txt  configure_1.txt
tests/aws/object_storage/: clone.sh  move_4PubSub_4Search.sh  pub.sh  search.sh  sub.sh
tests/aws/run_commands_main/: bootstrap  commands_args.txt  rclone.conf  run_commands_main.sh
tests/aws/run_commands_sub/: bootstrap  commands_args.txt  rclone.conf  run_commands_sub.sh
tests/cache/Open/Alphanumeric/Surface/SYNOP/RJTD/2020/0507/0000/: SMJP02.txt  SMJP02_1.txt  (+1 more)
tests/cache/Open/Alphanumeric/Surface/SYNOP/RJTD/2020050700/: 00_SMJP01_0.txt
tests/tile_arrow/: pub.txt.tmp
