[metadata]
name = meteorological_preprocessor
version = ('0.0.1',)
author = Japan Meteorological Agency
license = Apache License Version 2.0
description = Command line tools that can convert WMO/NOAA(ftp://tgftp.nws.noaa.gov/SL.us008001/) batch files to meteorological data cache and meteorological data cache to WMO batch files.
long_description = file: README.md
keywords = meteorology
url = http://github.com/public-tatsuya-noyori/meteorological_preprocessor
classifiers =
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
py_modules = meteorological_preprocessor
python_requires = >=3.3
install_requires = eccodes-python; pandas; pyarrow
include_package_data = True

[options.extras_require]
test = pytest

[options.entry_points]
console_scripts = 
    met_pre_batch_to_cache = met_pre_batch_to_cache:main
