[metadata]
name = meteorological_preprocessor
version = ('0.0.5',)
author = Japan Meteorological Agency
author-email =
license = Apache License Version 2.0
license-file = LICENSE
description = meteorological preprocess tools.
long_description = file: README.md
keywords = meteorology
home-page = https://www.jma.go.jp
project_urls =
    Source Code = http://github.com/public-tatsuya-noyori/meteorological_preprocessor
classifiers =
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
package_dir =
    = src
packages = meteorological_preprocessor
include_package_data = True
py_modules =
    met_pre_batch_to_cache
    met_pre_cache_to_batch
python_requires = >=3.3
install_requires =
    eccodes-python
    pandas
    pyarrow

[options.package_data]
* = *.csv

[options.entry_points]
console_scripts =
    met_pre_batch_to_cache = meteorological_preprocessor.met_pre_batch_to_cache:main
    met_pre_cache_to_batch = meteorological_preprocessor.met_pre_cache_to_batch:main
