[metadata]
name = meteorological_preprocessor
version = ('0.1.0',)
author = Japan Meteorological Agency
author-email =
license = MIT License
license-file = LICENSE
description = meteorological preprocess tools.
long_description = file: README.md
keywords = meteorology
home-page = https://www.jma.go.jp
project_urls =
    Source Code = http://github.com/public-tatsuya-noyori/meteorological_preprocessor
classifiers =
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
package_dir =
    = src
packages = meteorological_preprocessor
include_package_data = True
py_modules =
    met_pre_alphanumeric_to_arrow
    met_pre_arrow_to_tile_arrow
    met_pre_batch_to_cache
    met_pre_bufr_to_tile_dataset
    met_pre_cache_to_batch
    met_pre_grib_to_tile_dataset
    met_pre_read_arrow
python_requires = >=3.6
install_requires =
    eccodes
    pandas
    pyarrow

[options.package_data]
* = *.csv, *.sh

[options.entry_points]
console_scripts =
    met_pre_alphanumeric_to_arrow = meteorological_preprocessor.met_pre_alphanumeric_to_arrow:main
    met_pre_arrow_to_tile_arrow = meteorological_preprocessor.met_pre_arrow_to_tile_arrow:main
    met_pre_batch_to_cache = meteorological_preprocessor.met_pre_batch_to_cache:main
    met_pre_bufr_to_tile_dataset = meteorological_preprocessor.met_pre_bufr_to_tile_dataset:main
    met_pre_cache_to_batch = meteorological_preprocessor.met_pre_cache_to_batch:main
    met_pre_grib_to_tile_dataset = meteorological_preprocessor.met_pre_grib_to_tile_dataset:main
    met_pre_read_arrow = meteorological_preprocessor.met_pre_read_arrow:main
